--- a/behat.yml
+++ b/behat.yml
@@ -9,6 +9,7 @@ default:
         wordpress: wordpress-3.9.1-de_DE.zip
         sqlite_integration: sqlite-integration.1.6.3.zip
         disable_google_fonts: disable-google-fonts.1.0.zip
+        em_object_cache: em-object-cache.zip
       database_file: database_no_gravatar.sqlite
       selenium_implicit_timeout: 10000
   extensions:
