--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ifttt-instagram-gallery",
-  "version": "1.0.0",
-  "description": "When using IFTTT with WordPress you can just post new posts. This plugin helps you to do whatever you like. Configure your IFTTT job in a predefined way in you get any information you like in a WordPress action.",
+  "version": "0.9.0",
+  "description": "Loads Instagram images into the blog triggered by IFTTT and the ifttt-wordpress-bridge action",
   "main": "index.js",
   "scripts": {
     "test": "bin/behat"
