--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "bjoerne.com/ifttt-instagram-gallery",
-  "description": "When using IFTTT with WordPress you can just post new posts. This plugin helps you to do whatever you like. Configure your IFTTT job in a predefined way in you get any information you like in a WordPress action.",
+  "description": "IFTTT Instagram Gallery is a highly configurable widget that automatically shares your latest Instagram pictures in an amazing looking photo grid on your WordPress blog.",
   "authors": [
     {
       "name": "bjoerne",
